<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".SelectUsernameActivity">

            <!-- Select Username Title -->
            <TextView
                android:id="@+id/selectUsernameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_username"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="#333333"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="80dp"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:gravity="center" />

            <!-- Username EditText -->
            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:hint="@string/username2"
                android:inputType="text"
                android:textColor="#333333"
                android:textColorHint="#888888"
                android:background="@drawable/edittext_box_background"
                app:layout_constraintTop_toBottomOf="@id/selectUsernameTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large" />


            <!-- Login Button -->
            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:onClick="setUsername"
                android:text="@string/confirm_username"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/black"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usernameEditText" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/loadingLayout"
        layout="@layout/loading_spinner" />

</FrameLayout>
